MODELINKS-72: deleteEvent case tests